<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ShopSale</string>
    //VIE Language
    <string name="home">Trang chủ</string>
    <string name="category">Danh mục</string>
    <string name="cart">Giỏ hàng</string>
    <string name="user">Người dùng</string>
    <string name="tinnhan">Tin nhắn</string>
    <string name="texting">Nhắn tin</string>
    <string name="chart">Thông kê, doanh thu</string>
    <string name="notifications">Thông báo</string>
    <string name="dark_modes">Chế độ tối</string>
    <string name="language">Ngôn ngữ</string>
    <string name="email">Email</string>
    <string name="get_pass">Quên mật khẩu</string>
    <string name="pass">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="dont_have_account">Chưa có tài khoản?</string>
    <string name="sign_up">Đăng ký</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <!--    <string name="tv_forgot_pass">Quên mật khẩu</string>-->
    <string name="enter_email">Nhập email</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="send">Gửi</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="re_enter_password">Nhập lại mật khẩu</string>
    <string name="agree">Đồng ý</string>
    <string name="verify">Xác nhận</string>
    <string name="title_verify_OTP">Vui lòng nhập mã xác nhận để hoàn thành đăng ký</string>
    <string name="title_verify_Sign_In">Vui lòng nhập mã xác nhận để hoàn thành đăng nhập</string>
    <string name="email_or_phone_number">Email hoặc số điện thoại</string>
    <string name="re_enter_email_or_phone_number">Vui lòng nhập email hoặc số điện thoại</string>
    <!--    <string name="re_enter_password">Vui lòng nhập password</string>-->
    <string name="email_or_phone_number_wong">Email hoặc số điện thoại nhập vào không đúng định dạng</string>

    //ENG Language
    <string name="title_home_eng">Home</string>
    <string name="title_category_eng">Category</string>
    <string name="title_cart_eng">Cart</string>
    <string name="title_dashboard_eng">Dashboard</string>
    <string name="title_notifications_eng">Notifications</string>
    <string name="no_notification_eng">No notification\n</string>
    <string name="remember_me_eng">Remember me</string>
    <string name="or_eng">Or</string>


    //Collection
    <string name="web_client_id">300820864058-itm66caj4h69gr2ej0eh6i2d95f979ga.apps.googleusercontent.com</string>
    <string name="login_google">Đăng nhập với Google</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="logout_success">Đăng xuất thành công</string>
    <string name="requireForm">Điền đủ thông tin</string>
    <string name="requirePass"><![CDATA[Password > 6]]></string>
    <string name="google_login_session">Đang trong phiên đăng nhập google</string>
    <string name="fb_auth_login_session">Đang trong phiên đăng nhập email firebase auth</string>
    <string name="facebook_login_session">Đang trong phiên đăng nhập facebook</string>
    <string name="verify_email_msg">Vui lòng xác thực email trước khi đăng nhập</string>
    <string name="facebook_app_id">1029801428156168</string>
    <string name="fb_login_protocol_scheme">fb1029801428156168</string>
    <string name="facebook_client_token">78c50786445bf6a56de3aa87c43d5a30</string>
    <string name="send_verify_email">Gửi email xác nhận</string>
    <string name="check_email_verify">Đã gửi thành công \nVui lòng kiểm tra email xác thực</string>

    <string name="order">Đặt hàng</string>
    <string name="shipping_address">Địa chỉ nhận hàng</string>
    <string name="payment_methods">Phương thức thanh toán</string>
    <string name="cod">Thanh toán khi nhận</string>
    <string name="quantity">Số lượng</string>
    <string name="total_money_product">Tổng tiền hàng:</string>
    <string name="shipping_fee">Phí vận chuyển:</string>
    <string name="total">Tổng:</string>\
    <!--    <string name="place_order">Đặt hàng</string>-->


    <string name="delivery_address">Địa chỉ đã lưu</string>
    <string name="shop">Cửa hàng</string>
    <string name="setting">Cài đặt</string>
    <string name="my_order">Đơn hàng của tôi</string>
    <string name="log_out">Đăng xuất</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="full_name">Họ và tên</string>
    <string name="review">Đánh giá</string>
    <string name="username">Tên người dùng</string>


    <string name="sticker">Nhãn dán</string>
    <string name="add_file">Thêm file</string>
    <string name="camera">Máy ảnh</string>
    <string name="message_content">Nội dung tin nhắn</string>
    <string name="chat">Tin nhắn</string>
    <string name="add_an_address">Thêm địa chỉ</string>


    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="address">Địa chỉ</string>
    <string name="address_pay">Địa chỉ giao hàng</string>
    <string name="search">Tìm kiếm</string>
    <string name="save">Save</string>
    <string name="email_not_authenticated">Email has not been authenticated</string>
    <string name="abate">Thanh toán</string>
    <string name="submit">Gửi</string>
    <string name="leave_a_comment">Để lại bình luận</string>
    <string name="comment_for_product">Nhận xét - góp ý</string>
    <string name="comment">Đánh giá</string>
    <string name="feedback_product">Đánh giá sản phẩm</string>
    <string name="contact">Liên hệ</string>
    <string name="tag_address">Tỉnh/ Thành phố, Quận/ Huyện, Phường/ Xã</string>
    <string name="tag_street">Đường/ Tòa nhà</string>
    <string name="tag_home">Số nhà/ Tầng</string>
    <!--    <string name="notification">Notification</string>-->
    <string name="choose_bank">Lựa chọn ngân hàng</string>
    <string name="bank">Ngân hàng</string>
    <string name="order_Information">Thông tin đơn hàng</string>
    <string name="payment_amount">Số tiền thanh toán</string>
    <string name="oder_value">Giá trị đơn hàng</string>
    <string name="Transaction_fees">Phí giao dịch</string>
    <string name="order_ID">Mã đơn hàng</string>
    <string name="provider">Nhà cung cấp</string>
    <string name="card_number">Số thẻ</string>
    <string name="cancel">Thoát</string>
    <string name="Continue">Tiếp tục</string>
    <string name="date">Ngày</string>
    <string name="search_hint">Nhập từ khóa tìm kiếm</string>
    <string name="verify_otp">Xác thực OTP</string>
    <string name="m_s">Giây</string>
    <string name="time_check_otp">Thời gian</string>
    <string name="enter_otp">Nhập mã OTP</string>
    <string name="otp_have_been_send_to_u_phone">OTP đã gủi về điện thoại</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chitietdonhang">Chi tiết đơn hàng</string>
    <string name="tongthanhtoan">Tổng thanh toán:</string>
    <string name="trangthaidonhang">Trạng thái:</string>
    <!--    <string name="pay">Thanh toán</string>-->

    <string name="name_product">Tên sản phẩm</string>
    <string name="price">Giá sản phẩm</string>
    <string name="status">Trạng thái</string>
    <string name="time"> giờ</string>
    <string name="date_time">Ngày và giờ</string>
    <string name="add_an_bill">Tạo hoá đơn</string>

    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="have_account">Đã có tài khoản ?</string>
    <string name="e_banking">E-Banking</string>
    <string name="help">Trung tâm hỗ trợ</string>
    <string name="clause">Điều khoản và Chính sách</string>
    <string name="voucher">Mã giảm giá</string>
    <string name="comment_mess">Đánh giá và góp ý của bạn giúp ích rất nhiều cho chúng tôi.\n\tRất mong nhận được phản hồi của bạn.</string>
    <string name="het_hang">Hết hàng</string>
    <string name="con_hang">Còn Hàng</string>
    <string name="vui_long_chon_dia_chi">Vui lòng chọn địa chỉ</string>
    <string name="thanh_to_n">Đã thanh toán: </string>
    <string name="b_n_c_mu_n_ch_n_voucher">Bạn có muốn chọn voucher</string>
    <string name="login_err">Đã hết phiên đăng nhập vui lòng đăng nhập lại</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="vnd_0">0 VND</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="find_search">Tìm</string>
    <string name="history_search">Lịch sử tìm kiếm</string>
    <string name="recommend">Đề xuất</string>
    <string name="result_search">Kết quả tìm kiếm</string>
    <string name="not_found">Không tìm thấy kết quả phù hợp</string>
    <string name="doi_xac_nhan">Đang đợi xác nhận</string>
    <string name="dang_giao_hang">Đang giao hàng</string>
    <string name="da_thanh_toan">Đã thanh toán</string>
    <string name="cho_lay_hang">Chờ lấy hàng</string>
    <string name="da_huy">Đã hủy</string>
    <string name="huy_don_hang">Hủy đơn hàng</string>
    <string name="danh_gia">Đánh giá</string>
    <string name="xem_them">--Xem thêm--</string>
    <string name="mua_ngay">Mua ngay</string>
    <string name="ma_otp_khong_hop_le">Mã OTP không hợp lệ vui lòng thử lại</string>
    <string name="chua_co_cuoc_hoi_thoai">Chưa có cuộc hội thoại nào</string>
    <string name="them_dia_chi_thanh_cong">Thêm địa chỉ thành công</string>
    <string name="cui_long_nhap_ten">Vui lòng nhập tên</string>
    <string name="vui_long_nhap_huye_tinh_xa">Vui lòng nhập tỉnh,huyện,xã</string>
    <string name="vui_long_nhap_duong_so_nha">Vui lòng nhập số đường/nhà</string>
    <string name="khong_duoc_de_trong">Không được để trống</string>
    <string name="ban_co_muon_xoa_dia_chi">Bạn có chắc chắn muốn xóa địa chỉ này?</string>
    <string name="sua_thanh_cong">Sửa thành công</string>
    <string name="xoa_thanh_cong">Xóa thành công</string>
    <string name="xem_them_1">Xem thêm</string>
    <string name="an_bot">Ẩn bớt</string>
    <string name="close">Đóng</string>
    <string name="do_want_delete_msg">Bạn có muốn xoá tin nhắn này?</string>
    <string name="delete_msg">Xoá</string>
    <string name="message_removed">Đã gỡ 1 tin nhắn.</string>
    <string name="y_message_removed">Bạn: Đã gỡ 1 tin nhắn.</string>
    <string name="sent_video">Đã gửi 1 video</string>
    <string name="voi_ma_giam_gia">với mã giảm giá</string>
    <string name="voi_ma_don_hang">với mã đơn hàng</string>
    <string name="t_o_t_i_kho_n">Tạo tài khoản</string>
    <string name="t_o_t_i_kho_n_v_b_t_u_mua_s_m_n_o">Tạo tài khoản và bắt đầu mua sắm nào !</string>
    <string name="tat_ca_san_pham">Tất cả sản phẩm</string>
</resources>