<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:menuCategory="alternative">

        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
    <item
            android:id="@+id/navigation_cart"
            android:icon="@drawable/cart"
            android:title="@string/cart" />

        <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/bell"
            android:title="@string/notifications" />

        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/user"
            android:title="@string/user" />

    </group>
</menu>