<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mauve"
    tools:context=".ui.dashboard.address.AddAddressActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_cre_address"
        app:title="@string/add_an_address"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="?attr/actionBarSize"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginLeft="45dp"
        android:textStyle="bold"
        android:layout_marginBottom="10sp"/>
    <EditText
        android:id="@+id/ed_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_coneradios"
        android:padding="20dp"
        android:textSize="16sp"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textColorHint="#BBAFAF"/>
    <EditText
        android:id="@+id/ed_phone_number"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_coneradios"
        android:padding="20dp"
        android:textSize="16sp"
        android:inputType="phone"
        android:layout_marginTop="15dp"
        android:hint="@string/phone_number"
        android:textColorHint="#BBAFAF"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_address"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginLeft="45dp"
        android:textStyle="bold"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/ed_city"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_coneradios"
        android:textSize="16sp"
        android:padding="20dp"
        android:inputType="text"
        android:hint="@string/tag_address"
        android:textColorHint="#BBAFAF"/>
    <EditText
        android:id="@+id/ed_street"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_coneradios"
        android:textSize="16sp"
        android:padding="20dp"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:hint="@string/tag_street"
        android:textColorHint="#BBAFAF"/>
    <Button
        android:id="@+id/btn_save"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:padding="14dp"
        android:paddingVertical="10dp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/right_msg"
        android:layout_marginTop="80dp"/>
</LinearLayout>