<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddReviewActivity"
    android:background="@color/mauve">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_feedback"
        app:title="@string/feedback_product"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="30dp"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_above="@+id/lnl_star"
        android:background="@color/white"/>
    <RelativeLayout
        android:id="@+id/layout_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_feedback"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="10dp">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/iphone_14_128gb"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/img_product"
            android:text="IPhone 14 Pro max"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_toEndOf="@+id/img_product"
            android:text="Trắng 128GB"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/lnl_star"
        android:layout_marginVertical="10dp"
        android:layout_below="@+id/layout_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1" />
        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/5"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="10sp"
            android:textStyle="normal"
            tools:ignore="SmallSp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnl_star"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/comment_for_product"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_comment"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_item_comment"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/leave_a_comment"
        android:inputType="textMultiLine"
        android:lines="5"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#BBAEAE"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_comment"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:gravity="center"
        android:scrollHorizontally="true"
        android:text="@string/comment_mess"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="normal" />
</RelativeLayout>